# arutech-finance-channel

./: .README.md.rebuild  .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  project.md
apps/api/: .README.md.rebuild  .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0701461178f7_add_leads_table_and_lead_permissions.py  469336338eff_add_contact_submissions.py  532e60562fde_create_users_and_audit_logs_tables.py  5bf4ba328030_add_los_loan_applications_and_documents.py  855cc489f8bf_add_dashboard_read_permission.py  a9e3b9b15ff5_add_phase_9_admin_panel_tables.py  c422da52af08_add_rbac_refresh_tokens_and_otp_codes.py  c7c3ce2e47cc_add_crm_customer_profiles_tags_.py  db0c83879dfe_add_lead_sources_tasks_and_analytics_.py
apps/api/scripts/: generate_jwt_keypair.py
apps/api/src/arutech_api/: main.py  worker.py
apps/api/src/arutech_api/api/: deps.py
apps/api/src/arutech_api/api/v1/: router.py
apps/api/src/arutech_api/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py  telemetry.py
apps/api/src/arutech_api/domain/audit/: entities.py  repository.py
apps/api/src/arutech_api/domain/auth/: entities.py  ports.py  repository.py
apps/api/src/arutech_api/domain/cms/: entities.py  repository.py
apps/api/src/arutech_api/domain/contact/: entities.py  repository.py
apps/api/src/arutech_api/domain/crm/: entities.py  interaction_repository.py  repository.py
apps/api/src/arutech_api/domain/dashboard/: alerts.py  entities.py
apps/api/src/arutech_api/domain/leads/: entities.py  repository.py  scoring.py  task_repository.py
apps/api/src/arutech_api/domain/lenders/: entities.py  (+1 more)
apps/api/src/arutech_api/services/: audit_service.py  auth_service.py  blog_post_service.py  contact_service.py  customer_service.py  dashboard_service.py  interaction_service.py  lead_service.py  lead_task_service.py  lender_service.py  loan_application_service.py  loan_document_service.py  loan_product_service.py  notification_template_service.py  rbac_service.py  settings_service.py  user_admin_service.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_admin_rbac.py  test_auth_flows.py  test_cms.py  test_contact.py  test_customers.py  test_dashboard.py  test_health.py  test_leads.py  test_lenders.py  test_loan_products.py  test_loans.py  test_notification_templates.py  test_settings.py  test_trusted_proxy.py  test_user_repository.py
apps/api/tests/unit/: test_dashboard_alerts.py  test_lead_scoring.py  test_lead_transitions.py  test_loan_calculations.py  test_otp_and_tokens.py  test_security.py  test_worker.py
(+211 files in other folders)
