[project]
name = "arutech-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Somdev Sheel", email = "somdevsheel7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "boto3>=1.35",
    "celery[redis]>=5.4",
    "email-validator>=2.2",
    "fastapi>=0.118",
    "gunicorn>=23.0",
    "opentelemetry-exporter-otlp>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-sdk>=1.29",
    "passlib[argon2]>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt[crypto]>=2.10",
    "python-multipart>=0.0.20",
    "redis>=5.2",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.4",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
arutech-api = "arutech_api.main:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "types-passlib>=1.7.7.20260211",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["slowapi.*", "passlib.*", "celery.*"]
ignore_missing_imports = true

# Celery's own decorators are untyped, which strict mode otherwise flags on
# every `@celery_app.task(...)`-decorated function. Add future task modules
# (e.g. `arutech_api.tasks.*`) to this list as they're introduced.
[[tool.mypy.overrides]]
module = ["arutech_api.worker"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=arutech_api --cov-report=term-missing"

[tool.coverage.run]
source = ["src/arutech_api"]
omit = ["*/alembic/*"]
# SQLAlchemy's async engine bridges to sync DBAPI calls via greenlet
# (`greenlet_spawn`); without this, coverage.py's tracer loses track of
# code on the caller's side of that switch — e.g. whole service-method
# bodies would misreport as uncovered even when tests clearly exercise
# their branches (see docs/phase-2-architecture.md).
concurrency = ["greenlet", "thread"]
